# creovo

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/web/: .env.example  build_error_undici.txt  build_log.txt  frontend_errors.txt  frontend_errors_2.txt  frontend_final.txt  next.config.js  package.json  tailwind.config.js  ts_errors.txt  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/stores/: auth.store.ts  jobs.store.ts
apps/web/src/types/: api.ts  auth.ts  index.ts  job.ts  pipeline.ts  platform.ts  prompt.ts  subscription.ts
firebase/: firebase.json  firestore.indexes.json  firestore.rules
services/: .env.example  Dockerfile  check_config.py  install_log.txt  install_log_2.txt  install_log_3.txt  package.json  pyproject.toml  requirements.txt
services/lensio/: __init__.py
services/lensio/ai/: __init__.py  google_ai.py  prompt_engine.py  script_generation.py
services/lensio/api/: __init__.py  app.py  dependencies.py  routes.py
services/lensio/billing/: __init__.py  stripe_service.py
services/lensio/core/: __init__.py  config.py
services/lensio/db/: __init__.py  seeder.py
services/lensio/export/: __init__.py  google_drive.py
services/lensio/models/: __init__.py
services/lensio/pipeline/: __init__.py  google_pipeline.py  video_pipeline.py
services/lensio/queue/: __init__.py  job_queue.py  worker.py
(+16 files in other folders)
